# MapGeneratorOCR_Scrappy

./: .gitignore  CMakeLists.txt  LICENSE  MapGeneratorOCR_Scrappy.slnx
MapGeneratorOCR_Scrappy/: App.cpp  App.h  MapGen.h  MapGeneratorOCR_Scrappy.vcxproj  MapGeneratorOCR_Scrappy.vcxproj.filters  MapSettings.cpp  MapSettings.h  Perlin.cpp  Perlin.h  Render.cpp  Render.h  Terrain.cpp  Window.h  tester.cpp
MapGeneratorOCR_Scrappy/libs/include/: stb_image_write.h
src/: App.cpp  App.h  Buffer.cpp  Buffer.h  CMakeLists.txt  DEBUG_LOG.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Map.h  MapGen.cpp  MapGeneratorOCR_Scrappy.vcxproj  MapGeneratorOCR_Scrappy.vcxproj.filters  MapSettings.h  Perlin.cpp  Perlin.h  Render.cpp  Render.h  Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h  Terrain.cpp  Terrain.h  Tools.cpp  Tools.h  Window.cpp  Window.h  main.cpp  pch.h  tester.cpp
src/shaders/: compile.bat  test.comp  test.comp.spv  test.vert  test.vert.spv
